# -QIYAM---Sovereign-Offline-AI-Operating-System

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: base_agent.py  business_intelligence_agent.py  computer_agent.py  critic_agent.py  data_analyst_agent.py  graph_maintenance_agent.py  knowledge_agent.py  research_agent.py  security_agent.py  task_agent.py  web_agent.py
api/: main.py  routes.py
api/routers/: federated_sync.py
config/: logger.py  prompts.yaml  settings.py
core/: intent_classifier.py  llm_engine.py  orchestrator.py  prompt_router.py  scheduler.py  worker.py
core/audio/: asr.py
core/decision_intelligence/: __init__.py  decision_engine.py  decision_scoring.py  scenario_simulator.py
core/finetuning/: trainer.py
core/meta_agent/: __init__.py  agent_scorer.py  meta_agent.py  routing_engine.py  telemetry_module.py
core/personalization/: __init__.py  adaptive_formatter.py  personalization_engine.py  (+2 more)
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
memory/: chroma_store.py  graph_store.py  memory_manager.py  postgres_store.py  sqlite_store.py
plugins/: __init__.py
scripts/: export_training_data.py
security/: __init__.py  auth.py  guardrails.py  sandbox.py
telegram/: __init__.py  bot.py  commands.py  file_handler.py  handlers.py  webhook.py
tests/: test_api.py
tools/: document_indexer.py  web_scraper.py
whatsapp/: __init__.py  webhook.py
(+33 files in other folders)
