[project]
name = "qiyam"
version = "0.1.0"
description = "Sovereign Offline Multi-Agent AI Operating System"
authors = [
    {name = "AI Architect", email = "architect@qiyam.local"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "chromadb>=0.5.0",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "openpyxl>=3.1.4",
    "python-multipart>=0.0.9",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.1.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0", # for TestClient
    "bandit>=1.7.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
